# AICO

./: .env.example  .gitignore  AICO_ALGORITHM_COMPARISON.md  AICO_DYNAMIC_ALIGNMENT_PLAN.md  CURRENT_CODEBASE.md  LONG_TERM_ALIGNMENT_DESIGN.md  PRODUCT_COMPLETENESS.md  README.md  README_zh.md  __init__.py  environment.yml  pyproject.toml  start_all.sh
algorithm/: mock_server.py  readme.md  requirements.txt
alignment/: __init__.py  alignment_event.py  alignment_job.py  embedding_similarity.py  expert_feedback.py  topic_extractor.py  topic_graph.py
api/: __init__.py  gateway_adapter.py  schemas.py
backend/: README.md  pom.xml
decision/: __init__.py  router.py  strategy_tree_runtime.py  thought_tree.py  tree_iteration.py
evaluation/: __init__.py  multi_source_feedback.py  response_evaluator.py  safety_guard.py
examples/: run_demo.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: alignment.js  auth.js  chat.js  decisionTree.js  ops.js  user.js
frontend/src/assets/: base.css  main.css
generation/: __init__.py  five_stage_policy.py  prompt_builder.py  response_generator.py
knowledge/: __init__.py  multi_source_retriever.py  retrieval_service.py
memory/: __init__.py  personal_memory.py  relationship_memory.py
perception/: __init__.py  personal_alignment_service.py  profile_service.py  relationship_graph.py  relationship_service.py
storage/: json_store.py  memory.py
tests/: test_dynamic_alignment.py  test_framework_smoke.py
(+134 files in other folders)
